Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -27,18 +27,50 @@
         </ul>
       </header>
       <section>
-        <h3>
-<a id="welcome-gestureit-codes" class="anchor" href="#welcome-gestureit-codes" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome GestureIt Codes.</h3>
+        <h1>
+<a id="gestureit" class="anchor" href="#gestureit" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>GestureIt</h1>
 
-<p>These are the codes we used on our project GestureIt.
-Our Project aims to bridge the gap between humans and the systems they interact with.</p>
+<p>Gesture Based Hardware Control Project Using Arduino.</p>
 
-<h3>
-<a id="contribitors-for-these-codes" class="anchor" href="#contribitors-for-these-codes" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contribitors for these Codes:</h3>
+<h1>
+<a id="about-the-developers" class="anchor" href="#about-the-developers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About The Developers</h1>
 
-<p>Rishabh Verma
-Rishi Chandak
-Saurabh Saluja</p>
+<p>1) Rishabh Verma <br>
+2) Rishi Chandak <br>
+3) Saurabh Saluja <br>
+We are a group of 3 Crazy Developers working towards a Computer Science Engineering Graduate Degree.</p>
+
+<h1>
+<a id="about-the-project" class="anchor" href="#about-the-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About The Project</h1>
+
+<p>We all know Human and Machines do not interact well. So in an attempt to bridge the Gap between humans and the systems they interact with, a plethora of input methods have been devised: keyboards, mice, game controllers, and touch screens. But Unfortunately none of these devices remove the barrier between man and machine.
+With the Gesture Based Hardware Control system, we aim to remove this obstruction by allowing the user to control a hardware device using natural gestures. The Gesture Based Hardware Control takes advantage of a multitude of sensors to capture hand movements and uses this information to control a device – in this case, a modified Remote Controlled car.</p>
+
+<h1>
+<a id="tools-and-technology-used" class="anchor" href="#tools-and-technology-used" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tools and Technology used</h1>
+
+<p>Arduino Due Microcontroller.<br>
+Arduino Mini pro.<br>
+Xbee wireless Module.<br>
+Xbee Sheild.<br>
+SOMO audio module.<br>
+Flex Sensor.<br>
+Force Sensor.<br>
+3D Gyroscope L3G4200.<br>
+DC Motor.<br>
+L293D DC Motor H-Bridge.<br>
+Bread Board / Proto Board.<br>
+RC Car.<br>
+Lots Of connecting Wires.<br>
+Arduino IDE.<br>
+programmed in C Language.<br></p>
+
+<h1>
+<a id="this-is-an-open-source-hardware-project" class="anchor" href="#this-is-an-open-source-hardware-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>This is an open source Hardware project</h1>
+
+<p>Feel Free to use and modify the codes written by us and create something more useful out of it.
+We would love to see your codes.
+Happy Coding!</p>
       </section>
     </div>
     <footer>
