--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Gestureit by rishabhverma17</title>
+    <title>GestureIt by rishabhverma17</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Gestureit</h1>
-        <h2>Gesture Based Hardware Control Project Using Arduino Due.</h2>
+        <h1>GestureIt</h1>
+        <h2>Gesture Based Hardware Control Project.</h2>
         <a href="https://github.com/rishabhverma17/GestureIt" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
@@ -28,50 +28,30 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h1>
-<a id="gestureit" class="anchor" href="#gestureit" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>GestureIt</h1>
+          <h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>Gesture Based Hardware Control Project Using Arduino.</p>
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
-<h1>
-<a id="about-the-developers" class="anchor" href="#about-the-developers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About The Developers</h1>
+<h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
 
-<p>1) Rishabh Verma<br>
-2) Rishi Chandak<br>
-3) Saurabh Saluja<br>
-We are a group of 3 Crazy Developers working towards a Computer Science Engineering Graduate Degree.</p>
+<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
 
-<h1>
-<a id="about-the-project" class="anchor" href="#about-the-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About The Project</h1>
+<h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
 
-<p>We all know Human and Machines do not interact well. So in an attempt to bridge the Gap between humans and the systems they interact with, a plethora of input methods have been devised: keyboards, mice, game controllers, and touch screens. But Unfortunately none of these devices remove the barrier between man and machine.
-With the Gesture Based Hardware Control system, we aim to remove this obstruction by allowing the user to control a hardware device using natural gestures. The Gesture Based Hardware Control takes advantage of a multitude of sensors to capture hand movements and uses this information to control a device – in this case, a modified Remote Controlled car.</p>
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
-<h1>
-<a id="tools-and-technology-used" class="anchor" href="#tools-and-technology-used" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tools and Technology used</h1>
+<h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>Arduino Due Microcontroller.<br>
-Arduino Mini pro.<br>
-Xbee S2 wireless Module.<br>
-Xbee Sheild.<br>
-Xbee USB FTDI 232R Adapter.<br>
-Flex Sensor.<br>
-2 Force Sensor.<br>
-Accelerometer.<br>
-2 DC Motor.<br>
-L293D DC Motor H-Bridge.<br>
-Bread Board / Proto Board.<br>
-RC Car.<br>
-Lots Of connecting Wires.<br>
-Arduino IDE.<br>
-programmed in C Language.<br></p>
+<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
 
-<h1>
-<a id="this-is-an-open-source-hardware-project" class="anchor" href="#this-is-an-open-source-hardware-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>This is an open source Hardware project</h1>
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Feel Free to use and modify the codes written by us and create something more useful out of it.<br>
-We would love to see your codes.<br>
-Happy Coding!<br></p>
+<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
         </section>
 
         <aside id="sidebar">
